Grace/tests/gibbs/errors/t305.grace
// ERROR = P1018
var negativeNumber := -(.)
